crates/pvm-storage/tests/ui/nested_mapping_view_blocks_insert.stderr
warning: variable does not need to be mutable
  --> tests/ui/nested_mapping_view_blocks_insert.rs:22:13
   |
22 |         let mut inner = self.allowances.get(&owner);
   |             ----^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0596]: cannot borrow data in dereference of `pvm_storage::Ref<'_, Mapping<Address, Uint<256, 4>>>` as mutable
  --> tests/ui/nested_mapping_view_blocks_insert.rs:23:9
   |
23 |         inner.insert(&spender, &U256::from(9999));
   |         ^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `pvm_storage::Ref<'_, Mapping<Address, Uint<256, 4>>>`
